[package]
name = "pallet-xyk-liquidity-mining"
version = "1.1.5"
description = "Liquidity mining"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/Basilisk-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/Basilisk-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", features = ["derive", "max-encoded-len"], default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

log = { version = "0.4.17", default-features = false }

# ORML dependencies
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.29", default-features = false }

# Local dependencies
primitives = { path = "../../primitives", default-features = false }

# Warehouse dependencies
pallet-liquidity-mining = { git = "https://github.com/galacticcouncil/warehouse", rev="4ec8173a4dd52104ab696102c2e33108039ed871", default-features = false }
hydradx-traits = { git = "https://github.com/galacticcouncil/warehouse", rev="4ec8173a4dd52104ab696102c2e33108039ed871", default-features = false }
pallet-nft = { git = "https://github.com/galacticcouncil/warehouse", rev="4ec8173a4dd52104ab696102c2e33108039ed871", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch="polkadot-v0.9.29" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch="polkadot-v0.9.29"}
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
pretty_assertions = "1.2.1"
lazy_static = "1.4.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "orml-traits/std",
    "orml-tokens/std",
    "primitives/std",
    "hydradx-traits/std",
    "pallet-balances/std",
    "pallet-liquidity-mining/std",
    "log/std",
]
try-runtime = ["frame-support/try-runtime"]
