[package]
name = "pallet-xyk-liquidity-mining"
version = "1.1.13"
description = "Liquidity mining"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/Basilisk-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/Basilisk-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true }

log = { workspace = true }

# ORML dependencies
orml-traits = { workspace = true }

# Local dependencies
primitives = { path = "../../primitives", default-features = false }

# Warehouse dependencies
pallet-liquidity-mining = { workspace = true }
hydradx-traits = { workspace = true }
pallet-nft = { workspace = true }
pallet-xyk = { workspace = true }

# Substrate dependencies
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
orml-tokens = { workspace = true }
pallet-balances = { workspace = true }
pretty_assertions = { workspace = true }
lazy_static = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "orml-traits/std",
    "orml-tokens/std",
    "primitives/std",
    "hydradx-traits/std",
    "pallet-balances/std",
    "pallet-liquidity-mining/std",
    "log/std",
]
try-runtime = ["frame-support/try-runtime"]
